...
                android:text="@string/cleaning_schedule"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_cleaning_schedule_add"
                android:layout_width="51dp"
                android:layout_height="53dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/plus_symbol"
                app:layout_constraintEnd_toEndOf="parent"
...
