...
                android:text="@string/financing_furniture_title"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_financing_furniture_list_add"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/plus_symbol"
                android:textSize="18sp"
...
